name:                haskell-samp
version:             0.1.0.0
synopsis:            Haskell library for developing SA:MP plugins
homepage:            https://github.com/schroffl/haskell-samp#readme
license:             MIT
license-file:        LICENSE
author:              schroffl
maintainer:          example@example.com
copyright:           2018 schroffl
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=2.0

library
  build-tools:         c2hs
  hs-source-dirs:      src
  exposed-modules:     Samp
  other-modules:       Samp.Internal
                     , Samp.Internal.Constants
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  include-dirs:        include/samp-plugin-sdk
                     , include/sampgdk

source-repository head
  type:     git
  location: https://github.com/schroffl/haskell-samp
